Renamed model ME to MEC.

--- a/r-inla.org/doc/hyper/latent/mec.tex
+++ b/r-inla.org/doc/hyper/latent/mec.tex
@@ -55,5 +55,5 @@
 	 \item[ n.required ] FALSE 
 	 \item[ set.default.values ] FALSE 
 	 \item[ status ] experimental 
-	 \item[ pdf ] me 
+	 \item[ pdf ] mec 
 \end{description}
