--- a/r-inla.org/doc/latent/meb.tex
+++ b/r-inla.org/doc/latent/meb.tex
@@ -10,14 +10,14 @@
 \subsection*{Parametrization}
 
 This is an implementation of the Berksom measurement error model for a
-fixed effect. The observed covariate is $x$ but its $\widetilde{x}$
+fixed effect. The observed covariate is $w$ but it is $x$
 that goes into the linear predictor
 \begin{displaymath}
-    \eta = \ldots + \beta \widetilde{x} + \ldots
+    \eta = \ldots + \beta x + \ldots \ ,
 \end{displaymath}
-where $\widetilde{x} = x + \epsilon$ where $\epsilon{}$ is Gaussian
-with precision $\tau s$
-where $s$ is a vector of fixed scalings (default all are 1).
+where $x = w + u$ and $u$ is Gaussian
+with precision $\tau_u\cdot  s$,
+ and $s$ is a vector of fixed scalings (default all are 1).
 
 
 
@@ -30,7 +30,7 @@ The hyperparameter specification is as follows:
 \end{displaymath}
 and the prior is defined on $\theta_{1}$,
 \begin{displaymath}
-    \theta_{2} = \log(\tau)
+    \theta_{2} = \log(\tau_u)
 \end{displaymath}
 and the prior is defined on $\theta_{2}$.
 
@@ -39,15 +39,15 @@ and the prior is defined on $\theta_{2}$.
 The MEB is specified inside the {\tt f()}
 function as
 \begin{verbatim}
- f(x, [<weights>,] model="meb", hyper = <hyper>, scale = <s>)
+ f(w, [<weights>,] model="meb", hyper = <hyper>, scale = <s>)
 \end{verbatim}
-Here, \texttt{x} are the observed covariates, and the fixed scaling of
+Here, \texttt{w} are the observed covariates, and the fixed scaling of
 the observational precision is given in argument \texttt{scale}. If
 the argument \texttt{scale} is not given, then $s$ is set to $1$.
 
-Note that only the unique values of \texttt{x} are used, so if two or
-more elements of \texttt{x} are \emph{identical}, then they refer to
-the \emph{same} element in the covariate $\widetilde{x}$.
+Note that only the unique values of \texttt{w} are used, so if two or
+more elements of \texttt{w} are \emph{identical}, then they refer to
+the \emph{same} element in the covariate $x$.
 
 
 \subsubsection*{Hyperparameter specification and default values}
