--- a/r-inla.org/doc/hyper/latent/mec.tex
+++ b/r-inla.org/doc/hyper/latent/mec.tex
@@ -14,7 +14,7 @@
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
-	 	 	 \item[ name ] prec.obs 
+	 	 	 \item[ name ] prec.u 
 	 	 	 \item[ short.name ] prec 
 	 	 	 \item[ prior ] loggamma 
 	 	 	 \item[ param ] 1 1e-04 
