Fixed an remaining issue with parameters in the to.theta and from.theta mappings.

--- a/r-inla.org/doc/hyper/group/exchangeable.tex
+++ b/r-inla.org/doc/hyper/group/exchangeable.tex
@@ -9,8 +9,8 @@
 	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] normal 
 	 	 	 \item[ param ] 0 0.2 
-	 	 	 \item[ to.theta ] \verb|function(x, ngroup) log((1+x*(ngroup-1))/(1-x))| 
-	 	 	 \item[ from.theta ] \verb|function(x, ngroup) (exp(x)-1)/(exp(x) + ngroup -1)| 
+	 	 	 \item[ to.theta ] \verb|function(x, REPLACE.ME.ngroup) log((1+x*(ngroup-1))/(1-x))| 
+	 	 	 \item[ from.theta ] \verb|function(x, REPLACE.ME.ngroup) (exp(x)-1)/(exp(x) + ngroup -1)| 
 	 	 \end{description}
 	 \end{description}
 \end{description}
